# codex-cache-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/integrations/: alfred.md  codex-hooks.md  raycast.md
examples/alfred/: codex-cache-plain.sh  codex-cache-status.sh
examples/raycast/: codex-cache-detail.sh  codex-cache-plain.sh
src/codex_cache_monitor/: __init__.py  cli.py  doctor.py  metrics.py  models.py  parser.py  render.py  scanner.py  status.py
tests/: test_cli.py  test_metrics.py  test_parser.py  test_render.py
tests/fixtures/codex-home/sessions/: sample-session.jsonl
