[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cache-monitor"
version = "0.5.0"
description = "A beautiful local terminal dashboard for Codex prompt cache visibility."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "codex-cache-monitor contributors" }
]
keywords = ["codex", "cache", "cli", "rich", "typer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Nver-theless/codex-cache-monitor"
Repository = "https://github.com/Nver-theless/codex-cache-monitor"
Issues = "https://github.com/Nver-theless/codex-cache-monitor/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
codex-cache = "codex_cache_monitor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codex_cache_monitor*"]
exclude = ["tests*", "examples*", "docs*", "assets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
